add: melhorias gerais e correções
