# backend/docs/swagger.json
@@ -24,6 +24,12 @@
                 "summary": "Autentica um usuário",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "UUID de desenvolvimento",
+                        "name": "X-Dev-UUID",
+                        "in": "header"
+                    },
+                    {
                         "description": "Credenciais de Login",
                         "name": "credentials",
                         "in": "body",
@@ -79,6 +85,12 @@
                 "summary": "Registra um novo usuário",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "UUID de desenvolvimento",
+                        "name": "X-Dev-UUID",
+                        "in": "header"
+                    },
+                    {
                         "description": "Credenciais de Registro",
                         "name": "credentials",
                         "in": "body",
@@ -128,6 +140,12 @@
                 "summary": "Adiciona um chapéu ao carrinho",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "JWT token",
+                        "name": "Authorization",
+                        "in": "header"
+                    },
+                    {
                         "description": "Item do carrinho",
                         "name": "item",
                         "in": "body",
@@ -162,6 +180,12 @@
                 ],
                 "summary": "Atualiza o carrinho",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "JWT token",
+                        "name": "Authorization",
+                        "in": "header"
+                    },
                     {
                         "description": "Item do carrinho",
                         "name": "item",
@@ -198,6 +222,12 @@
                 "summary": "Finaliza o pedido",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "JWT token",
+                        "name": "Authorization",
+                        "in": "header"
+                    },
+                    {
                         "description": "Dados do pedido",
                         "name": "pedido",
                         "in": "body",
@@ -229,6 +259,14 @@
                     "estoque"
                 ],
                 "summary": "Lista o estoque de chapéus",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "UUID de desenvolvimento",
+                        "name": "X-Dev-UUID",
+                        "in": "header"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -252,6 +290,14 @@
                     "hats"
                 ],
                 "summary": "Lista todos os chapéus",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "UUID de desenvolvimento",
+                        "name": "X-Dev-UUID",
+                        "in": "header"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -280,23 +326,50 @@
                 "summary": "Registra um pedido",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "UUID de desenvolvimento",
+                        "name": "X-Dev-UUID",
+                        "in": "header"
+                    },
+                    {
+                        "type": "string",
+                        "description": "JWT token",
+                        "name": "Authorization",
+                        "in": "header"
+                    },
+                    {
                         "description": "Dados do pedido",
                         "name": "pedido",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.Pedido"
+                            "$ref": "#/definitions/models.Pedido"
                         }
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "201": {
+                        "description": "Created",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/models.Pedido"
+                        }
+                    },
+                    "400": {
+                        "description": "Dados inválidos",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "401": {
+                        "description": "Acesso não autorizado",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "409": {
+                        "description": "Produto sem estoque suficiente",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
@@ -403,6 +476,60 @@
                 },
                 "rememberMe": {
                     "type": "boolean"
+                }
+            }
+        },
+        "models.Pedido": {
+            "type": "object",
+            "properties": {
+                "bairro": {
+                    "type": "string"
+                },
+                "cep": {
+                    "type": "string"
+                },
+                "cidade": {
+                    "type": "string"
+                },
+                "cpf": {
+                    "type": "string"
+                },
+                "cupom": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "endereco": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "itens": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Hat"
+                    }
+                },
+                "nome": {
+                    "type": "string"
+                },
+                "numero": {
+                    "type": "string"
+                },
+                "pagamento": {
+                    "description": "\"pix\" ou \"boleto\"",
+                    "type": "string"
+                },
+                "telefone": {
+                    "type": "string"
+                },
+                "total": {
+                    "type": "number"
+                },
+                "uf": {
+                    "type": "string"
                 }
             }
         },
